--- a/src/modules/nftDisplay.module.css
+++ b/src/modules/nftDisplay.module.css
@@ -1,11 +1,17 @@
 .nftDisplay {
-  flex: 1.035;
+  flex: 35%;
   box-shadow: rgb(0 0 0 / 20%) 0px 0px 1rem 0px;
-  background-color: transparent;
-  padding: 15px;
-  text-align: center;
+  background-color: hsla(0, 0%, 100%, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nftContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 15px;
 }
 
 .nft {
